# ai-for-science

./: .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  README.md  SECURITY.md  index.html  pyproject.toml
.github/ISSUE_TEMPLATE/: fact-error.yml  source-update.yml
api/: dashboard.json  dimensions.json  overview.json  references.json
configs/: base.yaml  dev.yaml  prod.yaml
configs/prompts/: analysis_summary.md  analysis_system.md  insight_system.md  orchestrator_aggregate.md  orchestrator_system.md  reference_system.md  research_system.md
data/archive/: korea_legacy_sources.json
data/processed/: dashboard.json  evidence_index.json  platform.json  strategies.json
data/references/: external_resources.json  sources.json
docs/: architecture.md  methodology.md
outputs/evaluations/: eval_comparisons.core_objective_20260405_001721.json  eval_comparisons.core_objective_20260405_001958.json  eval_comparisons.core_objective_20260406_073516.json  eval_comparisons.core_objective_20260406_080214.json  eval_comparisons.data_strategy_20260405_001721.json  eval_comparisons.data_strategy_20260405_001958.json  eval_comparisons.data_strategy_20260406_073516.json  eval_comparisons.data_strategy_20260406_080214.json  eval_comparisons.governance_20260405_001721.json  eval_comparisons.governance_20260405_001958.json  eval_comparisons.governance_20260406_073516.json  eval_comparisons.governance_20260406_080214.json  eval_countries.eu_20260405_001721.json  (+91 more)
scripts/: archive_run.py  run_server.py  run_tests.py  setup_env.py
static/: app.js
tests/: conftest.py
(+41 files in other folders)
