[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-for-science"
version = "2.0.0"
description = "국가별 AI for Science 전략 비교 분석 멀티 에이전트 시스템"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "openai>=1.0.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.6",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "black>=24.0",
    "ipykernel>=6.0",
    "jupyter>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
ai4s-server = "ai_for_science.api.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_for_science"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: 단위 테스트",
    "integration: 통합 테스트",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
target-version = ["py311"]
line-length = 100
